# ChangeLog for media-sound/guitarix2
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*guitarix2-0.32.3 (03 Feb 2015)

  03 Feb 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +guitarix2-0.32.3.ebuild:
  version bump
  fix python-r1 related warnings from waf-utils eclass

*guitarix2-0.32.1 (11 Dec 2014)

  11 Dec 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -guitarix2-0.27.1.ebuild, -guitarix2-0.27.1-r1.ebuild,
  -guitarix2-0.28.1.ebuild, -guitarix2-0.28.3.ebuild, +guitarix2-0.32.1.ebuild,
  guitarix2-9999.ebuild, metadata.xml:
  version bump
  remove old versions
  remove unnecessary version specifiers from deps
  use waf-utils eclass to simplify, it works now
  remove convolver and custom-cflags use flags
  hard depend on zita-convolver and zita-resampler to ensure determinism
  remove dependency on vorbis-tools
  slot depend on fftw and gtk+
  move jack_capture and meterbridge deps from DEPEND to RDEPEND
  make ebuilds identical to ease maintainance
  pass both --no-ladspa and --no-new-ladspa when USE="-ladspa"

  18 Mar 2014; Dominique Michel <dominique_libre@sourceforge.net>
  guitarix2-9999.ebuild:
  Add dev-cpp/eigen dependency.

*guitarix2-0.28.3 (23 Feb 2014)

  23 Feb 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
  +guitarix2-0.28.3.ebuild:
  Version bump.

  27 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  guitarix2-0.28.1.ebuild, guitarix2-9999.ebuild:
  Use slotted dependencies on glibmm and gtkmm as suggestet by nitm at the
  Gentoo Forums.

*guitarix2-0.28.1 (21 Jul 2013)

  21 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +guitarix2-0.28.1.ebuild, guitarix2-9999.ebuild:
  Version bump.
  Use the usex function to increase readability.

*guitarix2-0.27.1-r1 (13 Jul 2013)

  13 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +guitarix2-0.27.1-r1.ebuild, guitarix2-9999.ebuild:
  Use python-any-r1 to build with python2.7 (build fails with python3.3,