@@ -1,7 +1,7 @@
-DIST guitarix2-0.32.1.tar.bz2 20654862 SHA256 73c4d040b2fad2eb474c4b52ce5026d0fb95f11f1c1fdc07848c0349836287ea SHA512 a59e4ee73418000e728de327fb393c3193badaa086849715592ce085d0d83d1beff490c9eb9a0638554401b70b671c33167f3581fb0ddfba3463b532c68e3a32 WHIRLPOOL 82eccc64fc8dadb02d18382cd2c1978ae4f93401d32efb338c58dd627e360042f53b1659700b07b4c1f858981dff15928ff7577c9712269063a592a5ab8a36cd
 DIST guitarix2-0.32.3.tar.bz2 20759487 SHA256 2e822d836d2455eab523304b6ec952bfb6ef8c0bf44b952046d64877a62c6cf9 SHA512 994d9db9a1ebecfd89f7d1742a1f1bb29fe9e0bf73f0afb5b45d5d1b4192cc0cae0dcee4bb5a97ba3a6211d3602e432aa0804105a4840d1121109f491dd10750 WHIRLPOOL 24774413e57e5676450fb5ae1519af6aa835fa4db034d30faba0e06015b9584c6acf607273bb712a312e86eae24063c5eb22ff20ef2db55caf4f9642a4d71b1e
-EBUILD guitarix2-0.32.1.ebuild 1874 SHA256 3ebc0e28fd435dd8d9fe1336798ec534fe34e49b97cb92568bd68633daa6254b SHA512 827f02bd68dbf88981a4047ec6f51201452b06037d2e6851d0c2125177065f035673ef821ea7f029d7b313b35cd87d5502865c987242aab6b08edb5b3874cdba WHIRLPOOL b911b8fb53c3a8391c0d3f5773c064171c44051a6f9271b67733da03beb3c0d622a2802e5988558e99752630533d2ed454ced2e6a3ee734a1698408d0cd217e0
+DIST guitarix2-0.35.1.tar.xz 74997052 SHA256 e6ed0189e02f843d059a37a47b0c97540828d34b716da081e17898f983dad818 SHA512 ef5b3c3cf748c148f40532c15c2e3687753ddf242b6d8aa3b8c560716aee8b0eb5353ef48189140c2fd9df7094b9724bf9b84fa06e71e8a0decb675954a4c41b WHIRLPOOL 0db1ab3ff242b28d7f31127cdefa52033454d3b6d88ec509b76bf513271328e46c0bfec52f27cf7a216aba26262f7b390a144bf3b12f954f9d84e2cc571046fc
 EBUILD guitarix2-0.32.3.ebuild 1955 SHA256 70391d0f4667d077b48beef9b8fd2cf2a7ab6b6a3f323e897a67cc75a79f287e SHA512 6380d46e937f421f95c82fb03664b1af8016f8155f9c55c404fa8fc5c2980d484a258c8b17fea2c9605bd46ed8828f99d3a749b04da2b8a2a7baf6eda22ddf35 WHIRLPOOL 7fb3842ac4e1d725b3f4233ca05257f82311eb7c4730c8a25aba072edc8494d23a4fe094cd438363cb4e7b5ccc5b7d4b5622f59137ac002b0eb865a589ed7d26
+EBUILD guitarix2-0.35.1.ebuild 1954 SHA256 baa13566a3eae3fb82b4dc0f522613854f7aa55173c5523fae2f3fbc645fed13 SHA512 2f456567cc0e9e8fe1e12c94f4af5a864f3c7c55f540fdc3eb3229d01a20862940012c90d6e533fc539c7c296d60f259a5e19c991b7aa2f6863a19f2983bf931 WHIRLPOOL 2cee0448ea2666b670af624abd21ec5a95e71aa9c59aa4b1f7ce8dfaf39e9bac50c8e3f942372176e323da05b02d0458781c30a6356c9a489592089c179a7478
 EBUILD guitarix2-9999.ebuild 1874 SHA256 3ebc0e28fd435dd8d9fe1336798ec534fe34e49b97cb92568bd68633daa6254b SHA512 827f02bd68dbf88981a4047ec6f51201452b06037d2e6851d0c2125177065f035673ef821ea7f029d7b313b35cd87d5502865c987242aab6b08edb5b3874cdba WHIRLPOOL b911b8fb53c3a8391c0d3f5773c064171c44051a6f9271b67733da03beb3c0d622a2802e5988558e99752630533d2ed454ced2e6a3ee734a1698408d0cd217e0
-MISC ChangeLog 5732 SHA256 bd36b23ca68c3455ad2063aef9b9e366edcbf0d93a38079ebd6dfdde3417100b SHA512 7a45cce58cd891ed13d4eb95b38d2eace310402eaa53e37a655b9e19475a2b25708e00ca99175cefb1d3e35a1e5342b23cfa3a2272acd5bf7ce809aece3f93f6 WHIRLPOOL be33d4e613504aa644a0a30d7514881ac7abb2754e20ca41bfb4ce667719c1f4e93809ae3ef358df36cc28b7a89baeb883881f1eb8dc2a248bece61f33b72b97
+MISC ChangeLog 5903 SHA256 322cc207125b326f6ebda6273d7db8c7314370efb57faec9a7066ad19bffe96d SHA512 987d9042f0559e93fb9fe2fe51eea27930e0dc55753f2fb389776ed8dc588a0dd60f224005579be1766434010dcd754674d838e31daf693741f42408044e49e2 WHIRLPOOL 3892d0b49bab38caffcce54e9a9687638b2ff6cb2e36ec464bbdb57e7815d97d74690b9610ba6c3f679f0f6662ea8c7422bcca779678226ee89483989528a1dc
 MISC metadata.xml 490 SHA256 e552a52320b293125db155710e5eee09a245ac42b37675e99f915c647b08170d SHA512 14166323e56d906e55739045a8e4bdfa76283f80b61bc6af6577491bf04843d6283a384b73a5152652b47920aa5ca10b1f78731850996ae7f9bcc06aa423df15 WHIRLPOOL 83ccb45a1601e418132d0066711dd910c42a2c1f0bc6b01d993e365ed960e88db226b2eb101523535e4e76be0a2c52c9f155415261d5a1cb7f5716e15412022b
